# ResearchKnowledgeGraphAWS

./: .gitignore  README.md  cdk.json  pyproject.toml
blog/building-a-research-knowledge-graph-on-aws/: Untitled  index.html
diagrams/: README.md  architecture.drawio  architecture.md  architecture_diagram.py
docs/: architecture.md  deployment.md  example_queries.rq  graph_schema.md
frontend/: app.js  index.html  styles.css
scripts/: refresh_demo_data.py
src/researchknowledgegraphaws/: __init__.py
src/researchknowledgegraphaws/api/: __init__.py  auth.py  authors.py  health.py  ingest.py  nl.py  sparql.py  topics.py  works.py
src/researchknowledgegraphaws/infra/: __init__.py  app.py  stack.py
src/researchknowledgegraphaws/ingestion/: __init__.py  demo_dataset.py  models.py  openalex_client.py  pipeline.py  rdf_writer.py
src/researchknowledgegraphaws/shared/: __init__.py  config.py  http.py  sparql.py
tests/: test_demo_dataset.py  test_health.py  test_openalex_models.py  test_rdf_writer.py  test_sparql_validation.py
