[project]
name = "researchknowledgegraphaws"
version = "0.1.0"
description = "AWS Research Knowledge Graph using OpenAlex, Lambda, Step Functions, S3, and Neptune"
readme = "README.md"
authors = [
    { name = "Jofia Jose Prakash" }
]
requires-python = ">=3.11"
dependencies = [
    "aws-cdk-lib>=2.254.0",
    "boto3>=1.43.9",
    "constructs>=10.6.0",
    "diagrams>=0.25.1",
    "pydantic>=2.13.4",
    "rdflib>=7.6.0",
    "requests>=2.34.2",
]

[project.scripts]
researchknowledgegraphaws = "researchknowledgegraphaws:main"
research-kg-cdk = "researchknowledgegraphaws.infra.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
